--- a/index_files/index.html
+++ b/index_files/index.html
@@ -162,7 +162,7 @@
 <script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="main-r.min" src="./index_files/main-r.min.js.descarga"></script><link rel="preconnect" href="https://siteassets.parastorage.com/pages" crossorigin="">
 
 
-<title>General Student Resume</title>
+<title>Álvaro Moreira CV</title>
 
 
 
